--- a/src/main/resources/templates/Nosotros.html
+++ b/src/main/resources/templates/Nosotros.html
@@ -8,6 +8,9 @@
     <title>Sp | Nosotros</title>
     <link th:include="components/link">
 
+    <link rel="stylesheet" th:href="@{/css/menu.css}">
+    <script src="https://kit.fontawesome.com/35db202371.js" crossorigin="anonymous"></script>
+
 
     <style>
         body {
