--- a/src/main/resources/templates/carta.html
+++ b/src/main/resources/templates/carta.html
@@ -7,6 +7,10 @@
     <title>Sp | Carta de Menú</title>
     <link rel="stylesheet" href="/css/carta.css">
 
+
+    <link rel="stylesheet" th:href="@{/css/menu.css}">
+    <script src="https://kit.fontawesome.com/35db202371.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body class="body-carta">
@@ -87,7 +91,7 @@
 
                 </div>
                 <div class="carta-item" th:each="producto : ${productos}">
-                    <a th:href="@{/producto/{id}(id=${producto.idProducto})}" class="carta-item-link">
+                    <a th:href="@{/detalle/{idProducto}(idProducto=${producto.idProducto})}" class="carta-item-link">
 
                         <!-- Imagen -->
                         <div class="carta-item-image-wrapper">
