--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,10 @@
     <title>SaboresPeruanos</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link th:include="components/link">
+
+    <link rel="stylesheet" th:href="@{/css/menu.css}">
+<script src="https://kit.fontawesome.com/35db202371.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
