--- a/src/main/resources/templates/micuenta.html
+++ b/src/main/resources/templates/micuenta.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi cuenta</title>
-    <link th:include="components/link">
-    </link>
+    <link th:include="components/link"></link>
+    <link rel="stylesheet" th:href="@{/css/menu.css}">
+    <script src="https://kit.fontawesome.com/35db202371.js" crossorigin="anonymous"></script>
+
     <style>
         /* ===== Reset ===== */
 
