--- a/src/main/resources/templates/admin/adminMenu.html
+++ b/src/main/resources/templates/admin/adminMenu.html
@@ -8,7 +8,6 @@
 
     <!-- CSS -->
     <link th:include="components/link">
-
     <link rel="stylesheet" th:href="@{/css/adminMenu.css}">
     <script src="https://kit.fontawesome.com/35db202371.js" crossorigin="anonymous"></script>
 </head>
@@ -17,15 +16,16 @@
     <!-- FRAGMENTO DEL MENÚ LATERAL -->
     <aside th:fragment="adminSidebar" class="adm-sidebar">
         <div class="adm-logo league-spartan">
-            <i class="fas fa-cogs"></i>
+            <i class="fas fa-tools"></i>
             <span>Administración</span>
         </div>
 
         <nav class="adm-nav cabin">
-            <a href="/admin/dashboard" class="adm-link"><i class="fas fa-cogs"></i><span>Dashboard</span></a>
-            <a href="/admin/parametros" class="adm-link"><i class="fas fa-cogs"></i><span>Parámetros</span></a>
+            <a href="/admin/dashboard" class="adm-link"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a>
+            <a href="/admin/parametros" class="adm-link"><i class="fas fa-sliders-h"></i><span>Parámetros</span></a>
             <a href="/admin/empleados" class="adm-link"><i class="fas fa-users"></i><span>Gestión de Empleados</span></a>
-            <a href="/admin/productos" class="adm-link"><i class="fas fa-box"></i><span>Gestión de Productos</span></a>
+            <a href="/admin/productos" class="adm-link"><i class="fas fa-box-open"></i><span>Gestión de Productos</span></a>
+            <a href="/admin/carta" class="adm-link"><i class="fas fa-utensils"></i><span>Gestionar Carta</span></a>
             <a href="/admin/clientes" class="adm-link"><i class="fas fa-user-friends"></i><span>Gestión de Clientes</span></a>
             <a href="/admin/pedidos" class="adm-link"><i class="fas fa-shopping-cart"></i><span>Gestión de Pedidos</span></a>
             <a href="/admin/reportes-ingresos" class="adm-link"><i class="fas fa-chart-line"></i><span>Reportes de Ingresos</span></a>
